Errores de controller corregidos